--- a/01 markup/ex1-22.html
+++ b/01 markup/ex1-22.html
@@ -5,7 +5,7 @@
     <title>셀 합치기</title>
     <style>
         body{
-            /* border의 바깥쪽 여백 */
+            /* border의 바깥쪽 여백 */ㅠ
             margin: 0;
 
             /* border의 안쪽 여백 */
