--- a/06 MP/Ex01/xe01.html
+++ b/06 MP/Ex01/xe01.html
@@ -5,6 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> 무료 호스팅 사양</title>
 	<style>
+		    td{
+            border: 1px solid #000;
+			border-collapse: collapse;
+            text-align: center;
+			padding: 20px;
+
+        }
+		table{
+            margin: 0 auto;
+            width: 70%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+		}
 		.c1{
 			margin: 0 auto;
 			text-align: center;
@@ -14,10 +27,40 @@
 <body>
 	<div class = c1 >
 		<h1> 무료 호스팅 사양</h1>
+		<table>
+			<tr>
+				<td> 서비스 </td><td width = 400px > Apache 2.x </td>
+			</tr>
+			<tr> 
+				<td> PHP </td><td width = 400px > 7.x </td>
+			</tr>
+			<tr> 
+				<td> DB </td><td width = 400px > MySQL 8.x </td>
+			</tr>
+			<tr> 
+				<td> 캐릭터셋 </td><td width = 400px > UTF-8 </td>
+			</tr>
+			<tr> 
+				<td> FTP </td><td width = 400px > ID 1개 제공 (계정명.dothome.co.kr) </td>
+			</tr>
+			<tr> 
+				<td> MySQL DB관리기 </td><td width = 400px > 경로 : 도메인 주소 / myadmin </td>
+			</tr>
+			<tr> 
+				<td> CMS 자동설치 지원 </td><td width = 400px > </td>
+			</tr>
+			<tr> 
+				<td> 미지원 기능 </td><td width = 400px > SSL 보안 인증서 설치, SSH 웹로그, 타사 도메인 연결은 지원하지 않습니다.  </td>
+			</tr>
+			<tr>
+				<td colspan="2" > ❗ IRC BOT & 방송용 사설 PORT & Compiler & 개인 Daemon & Cron 운영은 허가되지 않습니다
+					❗ MySQL은 Localhost 외 외부 접속은 허용하지 않습니다
+					❗ GCC, C/C++은 컴파일이 지원되지 않습니다 </td>
+			</tr>
 		
-
-
-
+		
+		
+		</table>
 
 	</div>
 </body>
