--- a/01 markup/ex1-40.html
+++ b/01 markup/ex1-40.html
@@ -11,5 +11,12 @@
     <div>
         <iframe src=" ex1-37.html" title="반응형웹" width="500" height="500"></iframe>
     </div>    
+
+    <hr>
+    <h2> 유튜브 비디오  </h2>
+    <hr>
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Cmrb_nmWbCA?si=gqKB5RnCvQ5Nf9bq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
