--- a/06 MP/Ex01/xe01.html
+++ b/06 MP/Ex01/xe01.html
@@ -5,62 +5,100 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> 무료 호스팅 사양</title>
 	<style>
-		    td{
-            border: 1px solid #000;
-			border-collapse: collapse;
-            text-align: center;
-			padding: 20px;
-
-        }
-		table{
-            margin: 0 auto;
-            width: 70%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-		}
-		.c1{
-			margin: 0 auto;
+		   h3{
 			text-align: center;
-		}
+			font-size: 40px;
+			/* border: 1px solid red; */
+		   }
+		   table, tr, th,td{
+			border: 1px solid gray;
+			border-collapse: collapse;
+			margin: 0 auto;
+		   }
+		   th{
+			background-color: gainsboro;
+			height: 50px;
+		   }
+		   td.hover{
+			background-color: gainsboro;
+		   }
+		   .table{
+			width: 80%;	
+			text-align: center;
+			border: 1px solid gainsboro;
+		   }
+		   #d1 {
+			border: 1px solid red;
+			width: 50%;
+			/* height: 300px; */
+			margin: 20px;
+			padding: 20px;
+			text-align: center;
+		   }
 	</style>
 </head>
 <body>
-	<div class = c1 >
-		<h1> 무료 호스팅 사양</h1>
-		<table>
+	<div>
+		<h3 class="title"> 무료 호스팅 사양</h3>
+		<table class="table">
+			<tbody>
 			<tr>
-				<td> 서비스 </td><td width = 400px > Apache 2.x </td>
+				<th style="width: 22%;"> 서비스 </th>
+				<td colspan="3" > Apache 2.x </td>
 			</tr>
 			<tr> 
-				<td> PHP </td><td width = 400px > 7.x </td>
+				<th style="width: 22%;"> PHP </th>
+				<td colspan="3" > 7.x </td>
 			</tr>
 			<tr> 
-				<td> DB </td><td width = 400px > MySQL 8.x </td>
+				<th style="width: 22%;" > DB </th>
+				<td colspan="3"> MySQL 8.x </td>
 			</tr>
 			<tr> 
-				<td> 캐릭터셋 </td><td width = 400px > UTF-8 </td>
+				<th style="width: 22%;" > 캐릭터셋 </th>
+				<td colspan="3" > UTF-8 </td>
 			</tr>
 			<tr> 
-				<td> FTP </td><td width = 400px > ID 1개 제공 (계정명.dothome.co.kr) </td>
+				<th style="width:22%">FTP</th>
+				<td colspan="3">ID 1개 제공 ( 계정명.dothome.co.kr )</td>
 			</tr>
 			<tr> 
-				<td> MySQL DB관리기 </td><td width = 400px > 경로 : 도메인 주소 / myadmin </td>
+				<th style="width:22%">MySQL DB관리기</th>
+                <td colspan="3">경로 : 도메인 주소 / myadmin</td>
 			</tr>
 			<tr> 
-				<td> CMS 자동설치 지원 </td><td width = 400px > </td>
+				<th style="width:22%">CMS 자동설치 지원</th>
+				<td colspan="3">
+					<img src="1.wordpress.png">
+					<img src="2.xe.png">
+					<img src="3.gnuboard.png">	
+				</td>		
 			</tr>
 			<tr> 
-				<td> 미지원 기능 </td><td width = 400px > SSL 보안 인증서 설치, SSH 웹로그, 타사 도메인 연결은 지원하지 않습니다.  </td>
+				<th style="width:22%">미지원 기능</th>
+				<td colspan="3">SSL 보안인증서 설치, SSH, 웹로그, 타사 도메인 연결은 지원하지 않습니다.</td>
 			</tr>
 			<tr>
-				<td colspan="2" > ❗ IRC BOT & 방송용 사설 PORT & Compiler & 개인 Daemon & Cron 운영은 허가되지 않습니다
-					❗ MySQL은 Localhost 외 외부 접속은 허용하지 않습니다
-					❗ GCC, C/C++은 컴파일이 지원되지 않습니다 </td>
+				<td colspan="4">
+					 ! IRC BOT & 방송용 사설 PORT & Compiler &
+					 개인 Daemon & Cron 운영은 허가되지 않습니다.<br>
+					 ! MySQL은 Localhost 외 외부 접속은 허용하지
+					 않습니다.<br>
+					 ! GCC, C/C++은 컴파일이 지원되지 않습니다.
+				 </td>
 			</tr>
 		
 		
-		
+		</tbody>
 		</table>
+		
+		<div id = "d1"> 
+			
+			div 태그 <br>
+			div 태그2 <br>
+
+		
+		</div>
 
 	</div>
 </body>
