--- a/02 style/ex2-14.html
+++ b/02 style/ex2-14.html
@@ -6,9 +6,9 @@
 <style type="text/css"> 
     h3[class] { color: blue; }
     p[class="icox"] { color: red; }
-    /*
-    p[class~="icox"] { color: red; }
-    p[class|="icox"] { color: red; }
+    
+    p[class~="icoxpage"] { color: rgb(30, 145, 190); }
+    /* p[class|="icox"] { color: red; }
     p[class^="icox"] { color: red; }
     p[class$="icox"] { color: red; }
     p[class*="icox"] { color: red; }
