--- a/02 style/ex2-5.html
+++ b/02 style/ex2-5.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>type 선택자</title>
 <style type="text/css">       
-    p { color: blue; }
+    p { color: rgb(151, 151, 226); }
 </style> 
 </head> 
 <body>    
