--- a/02 style/ex2-6.html
+++ b/02 style/ex2-6.html
@@ -6,6 +6,7 @@
 <style type="text/css">       
     p { color: red; }
     #ctxt { color: blue; }
+    #txt { color: aquamarine;}
 </style> 
 </head> 
 <body>    
