--- a/02 style/ex2-8.html
+++ b/02 style/ex2-8.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>전체 선택자</title>  
 <style type="text/css"> 
-	* { color: blue; }
+	* { color: rgb(111, 111, 212); }
 </style> 
 </head> 
 <body>    
