--- a/01 markup/ex0-1.html
+++ b/01 markup/ex0-1.html
@@ -11,6 +11,8 @@
 			height: 100px;
 			margin: 10px ;
 			padding: 30px;
+			
+			float: left;
 
 		}
 		.s1{
@@ -20,7 +22,12 @@
 			margin: 10px ;
 			padding: 30px;			
 
+			float: right;
 
+		}
+		
+		.clear{
+			clear: both;
 		}
 	</style>
 </head>
@@ -30,10 +37,15 @@
 	<div class="d1"> div는 블록 태그 </div>
 	<div class="d1"> div는 블록 태그 </div>
 
+	<div class="clear">  </div>
+
 	<h2> 인라인 태그 </h2>	
 	<hr>
+	<span class="s1"> span 은 인라인 태그  </span>
 	<span class="s1"> span 은 인라인 태그 </span>
-	<span class="s1"> span 은 인라인 태그 </span>
+
+	<div class="clear">  </div>
+
 
 </body>
 </html>
