--- a/06 MP/Ex05/index.html
+++ b/06 MP/Ex05/index.html
@@ -7,7 +7,7 @@
 	<title> Index Page </title>
 	<style>
 		#wrap {
-			border: 1px solid red;
+			/* border: 1px solid red; */
 			width: 95%;
 			margin: 0 auto;
 			height: 1200px;
@@ -15,14 +15,14 @@
 
 		header,
 		footer {
-			border: 1px solid blue;
+			/* border: 1px solid blue; */
 			height: 100px;
 		}
 
 		header img {}
 
 		aside {
-			border: 1px solid green;
+			/* border: 1px solid green; */
 			width: 20%;
 			height: 650px;
 			float: left;
@@ -55,6 +55,11 @@
 			border: 1px solid #ccc;
 		}
 
+		.i1 {
+            float: left;
+            padding-right: 10px;
+        }
+
 		.i2 {
             padding-left: 74%;
 			padding-top: 10px;
@@ -66,7 +71,7 @@
 
 
 		main {
-			border: 1px solid magenta;
+			/* border: 1px solid magenta; */
 			width: 80%;
 
 			margin-left: 20%;
@@ -86,7 +91,7 @@
 		}
 
 		.main_contents {
-			border: 1px solid black;
+			/* border: 1px solid black; */
 			width: 48%;
 			height: 200px;
 
@@ -178,25 +183,25 @@
 
 			<div>
 				<div style="
-					border: 1px solid red; 
+					
 					float: right; padding: 7px; width: 1000px; text-align: right;"> HOME | LOGIN | JOIN | NOTICE
 				</div>
 
 				<!-- <div class="clear"></div> -->
 				<div style="
 				color : white; 
-				width : 1400px ; 
-				height : 30px; 
-				border:1px solid red; 
+				width : 1800px ; 
+				height : 40px; 
 				background-image: url('img/main_menu_bg.png');
 				background-repeat: no-repeat;
 				background-size: cover;
 				position: absolute;
-				left: 100px; 
+				left: 200px; 
 				top : 70px;
 				margin-left: 300px;
 				text-align: center;">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;자유 게시판
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					자유 게시판
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					기타 연주 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
