--- a/06 MP/Ex05/board_view.html
+++ b/06 MP/Ex05/board_view.html
@@ -248,7 +248,7 @@
         <div id="wrap">
             <header>
                 <div class="d1">
-                    <a href="ex05_index.html"><img width="70%" src="img/logo.png"></a>
+                    <a href="index.html"><img width="70%" src="img/logo.png"></a>
                 </div>
                 <div class="d2">
                     <p id="p1">HOME | LOGIN | JOIN | NOTICE</p>
@@ -257,7 +257,7 @@
                     </div>
                     <table class="text-overlay1">
                         <tr>
-                            <td width="20%"><a href="ex05_board_list.html">자유게시판</a></td>
+                            <td width="20%"><a href="board_list.html">자유게시판</a></td>
                             <td width="20%">기타 소개</td>
                             <td width="20%">공동 구매</td>
                             <td width="20%">연주회 안내</td>
@@ -350,8 +350,8 @@
                             <td></td>
                             <td width="22%">
                                 <img src="img/delete.png">
-                                <a href="ex05_board_list.html"><img src="img/list.png"></a>
-                                <a href="ex05_board_write.html"><img src="img/write.png"></a>
+                                <a href="board_list.html"><img src="img/list.png"></a>
+                                <a href="board_write.html"><img src="img/write.png"></a>
                             </td>
                         </tr>
                     </table>
