--- a/06 MP/Ex05/board_write.html
+++ b/06 MP/Ex05/board_write.html
@@ -245,7 +245,7 @@
         <div id="wrap">
             <header>
                 <div class="d1">
-                    <a href="ex05_index.html"><img width="70%" src="img/logo.png"></a>
+                    <a href="index.html"><img width="70%" src="img/logo.png"></a>
                 </div>
                 <div class="d2">
                     <p id="p1">HOME | LOGIN | JOIN | NOTICE</p>
@@ -254,7 +254,7 @@
                     </div>
                     <table class="text-overlay1">
                         <tr>
-                            <td width="20%"><a href="ex05_board_list.html">자유게시판</a></td>
+                            <td width="20%"><a href="board_list.html">자유게시판</a></td>
                             <td width="20%">기타 소개</td>
                             <td width="20%">공동 구매</td>
                             <td width="20%">연주회 안내</td>
@@ -329,6 +329,8 @@
                         <tr>
                             <td height="35px" class="main_t3">업로드 파일</td><td class="main_t4"><input type="file"></td>
                         </tr>
+
+
                     </table>
                     <table width="100%" class="main_t1">
                         <tr>
@@ -338,7 +340,7 @@
                                         <td></td>
                                         <td width="13%">
                                             <img src="img/ok.png">
-                                            <a href="ex05_board_list.html"><img src="img/list.png"></a>
+                                            <a href="board_list.html"><img src="img/list.png"></a>
                                         </td>
                                     </tr>
                                 </table>
