--- a/06 MP/Ex05/board_list.html
+++ b/06 MP/Ex05/board_list.html
@@ -234,7 +234,7 @@
         <div id="wrap">
             <header>
                 <div class="d1">
-                    <a href="ex05_index.html"><img width="70%" src="img/logo.png"></a>
+                    <a href="index.html"><img width="70%" src="img/logo.png"></a>
                 </div>
                 <div class="d2">
                     <p id="p1">HOME | LOGIN | JOIN | NOTICE</p>
@@ -243,7 +243,7 @@
                     </div>
                     <table class="text-overlay1">
                         <tr>
-                            <td width="20%"><a href="ex05_board_list.html">자유게시판</a></td>
+                            <td width="20%"><a href="board_list.html">자유게시판</a></td>
                             <td width="20%">기타 소개</td>
                             <td width="20%">공동 구매</td>
                             <td width="20%">연주회 안내</td>
@@ -326,7 +326,7 @@
                         </tr>
                         <tr>
                             <td height="35px" class="main_t3">1</td>
-                            <td class="main_t4"><a href="ex05_board_view.html">까스릉 님의 보드카가 정말 독하네요!!!</a></td>
+                            <td class="main_t4"><a href="board_view.html">까스릉 님의 보드카가 정말 독하네요!!!</a></td>
                             <td class="main_t3">루바토</td><td class="main_t3">2024-01-05</td><td class="main_t3">15</td>
                         </tr>
                         <tr>
@@ -348,8 +348,8 @@
                                         <td width="12%"></td>
                                         <td class="d6-1">◀ 이전 1 다음 ▶</td>
                                         <td width="17%">
-                                            <a href="ex05_board_list.html"><img src="img/list.png"></a>
-                                            <a href="ex05_board_write.html"><img src="img/write.png"></a>
+                                            <a href="board_list.html"><img src="img/list.png"></a>
+                                            <a href="board_write.html"><img src="img/write.png"></a>
                                         </td>
                                     </tr>
                                 </table>
