--- a/02 style/ex0-7_float vs flex.html
+++ b/02 style/ex0-7_float vs flex.html
@@ -41,6 +41,43 @@
 		display: flex;
 		height: 100px;
 	}
+
+	.c5{
+		display: flex;
+		justify-content: space-evenly;
+		/* flex-wrap: nowrap;		<- 기본 옵션 */
+
+		border: 1px solid blueviolet;
+		height: 2000px;
+	}
+
+	.c5 div{
+		border: 1px solid red;
+		background-color: gold;
+		width: 300px;
+		height: 300px;
+	}
+
+	.c6{
+		display: flex;
+		justify-content: space-evenly;
+
+		flex-wrap: wrap; /* 박스 크기에 맞게 아래로 떨어짐 */
+
+		align-items: center;
+
+		border: 1px solid blueviolet;
+		height: 800px;
+	}
+
+	.c6 div{
+		border: 1px solid red;
+		background-color: gold;
+		width: 300px;
+		height: 300px;
+	}
+
+
 	.c1 div, .c2 div, .c3 div, .c4 div{
 		border: 1px solid red;
 	}
@@ -51,7 +88,8 @@
 		clear: both;
 	 } 
 	</style>
-</head
+</head>
+
 <body>
 
 	<h2 style="width: 1000px; margin: 0 auto;" >  Float 처리  </h2>
@@ -98,6 +136,8 @@
 			<div> 박스3 </div>
 			<div> 박스4 </div>
 			<div> 박스5 </div>
+		</div>
+
 			<div class="clear"> </div>
 
 		</div>
@@ -112,6 +152,8 @@
 			<div> 박스3 </div>
 			<div> 박스4 </div>
 			<div> 박스5 </div>
+		</div>
+
 			<div class="clear"> </div>
 
 		</div>
@@ -127,9 +169,43 @@
 			<div> 박스3 </div>
 			<div> 박스4 </div>
 			<div> 박스5 </div>
+		</div>
+
 			<div class="clear"> </div>
 
 		</div>
 		<br><br><br>
+
+			
+		<h2> display :flex - align-items : center flex-wrap : nowrap </h2>
+	<hr>
+
+		<div class="c5">
+			<div> 박스1 </div>
+			<div> 박스2 </div>
+			<div> 박스3 </div>
+			<div> 박스4 </div>
+			<div> 박스5 </div>
+		</div>
+
+			<div class="clear"> </div>
+
+		</div>
+		<br><br><br>
+
+		<h2> display :flex - align-items : center flex-wrap : wrap </h2>
+		<hr>
+	
+			<div class="c6">
+				<div> 박스1 </div>
+				<div> 박스2 </div>
+				<div> 박스3 </div>
+				<div> 박스4 </div>
+				<div> 박스5 </div>
+			</div>
+				<div class="clear"> </div>
+	
+			</div>
+			<br><br><br>
 </body>
 </html>
