--- a/02 style/ex0-16_2.html
+++ b/02 style/ex0-16_2.html
@@ -11,7 +11,7 @@
 			background-color: red;
 			border: 1px solid black;
 
-			transition: width 1s , height 1s;
+			transition: width 1s;
 			/* tran	sition-delay: 1s; */
 			
 		}
@@ -24,8 +24,7 @@
 		#div6{ transition-timing-function:cubic-bezier(0.215, 0.610, 0.355, 1) ; }
 
 		div:hover{
-			width: 400px;
-			height: 800px;
+			width: 600px;
 		}
 		
 	</style>
