--- a/02 style/ex0-20_2.html
+++ b/02 style/ex0-20_2.html
@@ -119,7 +119,7 @@ footer {
   </aside>
  
   <footer class="c12">
-    COPYRIGHT(C) 루바토 All Rights Reseved.
+    COPYRIGHT(C) 루바토 All Rights Reserved.
   </footer>    
 </body>
 </html>
